--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "node-test1",
+  "name": "Node.js | Home work 1",
   "version": "1.0.0",
   "description": "file system testing",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index",
-    "start:dev": "nodemon index"
+    "dev": "nodemon index"
   },
-  "author": "Yuri",
+  "author": "Yuri Pochtiennykh",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.22"
   },
   "dependencies": {
     "nanoid": "^3.3.4",
-    "nodaemon": "^0.0.5",
     "yargs": "^17.7.2"
   }
 }
